Falta corregir la parte visual, la cuadricula no se centra.

--- a/src/unam/fesaragon/estructuradatos/vistas/Menu.fxml
+++ b/src/unam/fesaragon/estructuradatos/vistas/Menu.fxml
@@ -9,11 +9,11 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="1080.0" prefWidth="1920.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="unam.fesaragon.estructuradatos.controladores.vistas.MenuController">
+<AnchorPane fx:id="aPContenedorMenu" prefHeight="1080.0" prefWidth="1920.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="unam.fesaragon.estructuradatos.controladores.vistas.MenuController">
    <children>
       <SplitPane fx:id="splitPane" dividerPositions="0.8248175182481752" prefHeight="1080.0" prefWidth="1920.0">
         <items>
-          <AnchorPane fx:id="panelIzquierdo" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="1080.0" prefWidth="1680.0" />
+          <AnchorPane fx:id="panelIzquierdo" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="1080.0" prefWidth="1680.0" style="-fx-background-color: green;" />
           <AnchorPane maxWidth="-Infinity" minWidth="-Infinity" prefWidth="240.0" SplitPane.resizableWithParent="false">
                <children>
                   <VBox alignment="CENTER" maxWidth="240.0" prefWidth="240.0" spacing="20.0" translateY="100.0">
