--- a/src/unam/fesaragon/estructuradatos/vistas/cuadricula.fxml
+++ b/src/unam/fesaragon/estructuradatos/vistas/cuadricula.fxml
@@ -5,9 +5,9 @@
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 
-<AnchorPane fx:id="anchorPaneContenedorGridPane" prefHeight="100.0" prefWidth="100.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="unam.fesaragon.estructuradatos.controladores.vistas.CuadriculaController">
+<AnchorPane fx:id="anchorPaneContenedorGridPane" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="100.0" minWidth="100.0" prefHeight="100.0" prefWidth="100.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="unam.fesaragon.estructuradatos.controladores.vistas.CuadriculaController">
    <children>
-      <GridPane fx:id="cuadricula" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="100.0" prefWidth="100.0" styleClass="grid-pane" stylesheets="@styles.css">
+      <GridPane fx:id="cuadricula" maxHeight="100.0" maxWidth="100.0" minHeight="10.0" minWidth="10.0" prefHeight="100.0" prefWidth="100.0">
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" maxWidth="100.0" minWidth="10.0" prefWidth="100.0" />
           <ColumnConstraints hgrow="SOMETIMES" maxWidth="100.0" minWidth="10.0" prefWidth="100.0" />
