Funciona el rescalado de la cuadricula y ademas funcina correctamente la vista, aunque debe configurarse el tamano

--- a/src/unam/fesaragon/estructuradatos/vistas/Menu.fxml
+++ b/src/unam/fesaragon/estructuradatos/vistas/Menu.fxml
@@ -13,7 +13,7 @@
    <children>
       <SplitPane fx:id="splitPane" dividerPositions="0.8248175182481752" prefHeight="1080.0" prefWidth="1920.0">
         <items>
-          <AnchorPane fx:id="panelIzquierdo" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="1080.0" prefWidth="1680.0" style="-fx-background-color: green;" />
+          <AnchorPane fx:id="panelIzquierdo" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="1080.0" prefWidth="1680.0" />
           <AnchorPane maxWidth="-Infinity" minWidth="-Infinity" prefWidth="240.0" SplitPane.resizableWithParent="false">
                <children>
                   <VBox alignment="CENTER" maxWidth="240.0" prefWidth="240.0" spacing="20.0" translateY="100.0">
