--- a/src/unam/fesaragon/estructuradatos/vistas/celda.fxml
+++ b/src/unam/fesaragon/estructuradatos/vistas/celda.fxml
@@ -3,4 +3,6 @@
 <?import javafx.scene.layout.Pane?>
 
 
-<Pane fx:id="panelCelda" onMouseClicked="#onClicked" prefHeight="30.0" prefWidth="30.0" style="-fx-background-color: #cfcfcf;" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="unam.fesaragon.estructuradatos.controladores.vistas.CeldaController" />
+<Pane fx:id="panelCelda" onMouseClicked="#onClicked" style="-fx-background-color: #cfcfcf;"
+      xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1"
+      fx:controller="unam.fesaragon.estructuradatos.controladores.vistas.CeldaController"/>
