--- a/src/unam/fesaragon/estructuradatos/vistas/cuadricula.fxml
+++ b/src/unam/fesaragon/estructuradatos/vistas/cuadricula.fxml
@@ -7,18 +7,17 @@
 <?import javafx.scene.layout.RowConstraints?>
 
 <AnchorPane fx:id="anchorPaneContenedorGridPane" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308"
-            minHeight="-Infinity" minWidth="-Infinity" style="-fx-background-color: black;"
+            minHeight="400.0" minWidth="400.0" style="-fx-background-color: black;"
             xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1"
             fx:controller="unam.fesaragon.estructuradatos.controladores.vistas.CuadriculaController">
     <children>
-        <GridPane fx:id="cuadricula" stylesheets="@styles.css">
+        <GridPane fx:id="cuadricula" minHeight="400.0" minWidth="400.0" AnchorPane.topAnchor="0.0" AnchorPane.bottomAnchor="0.0"
+                  AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" stylesheets="@styles.css">
             <columnConstraints>
-                <ColumnConstraints hgrow="ALWAYS" minWidth="10.0"/>
-                <ColumnConstraints hgrow="ALWAYS" minWidth="10.0"/>
+                <ColumnConstraints minWidth="10.0" maxWidth="50.0" hgrow="ALWAYS"/>
             </columnConstraints>
             <rowConstraints>
-                <RowConstraints vgrow="ALWAYS" minHeight="10.0"/>
-                <RowConstraints vgrow="ALWAYS" minHeight="10.0"/>
+                <RowConstraints minHeight="10.0" maxHeight="50.0" vgrow="ALWAYS"/>
             </rowConstraints>
             <styleClass>
                 <String fx:value="grid-pane"/>
@@ -27,4 +26,5 @@
         </GridPane>
     </children>
 </AnchorPane>
+
 
