--- a/src/unam/fesaragon/estructuradatos/vistas/Menu.fxml
+++ b/src/unam/fesaragon/estructuradatos/vistas/Menu.fxml
@@ -24,7 +24,7 @@
                               <Font name="Verdana Bold" size="20.0" />
                            </font>
                         </Text>
-                        <Button maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="60.0" prefWidth="180.0">
+                        <Button fx:id="boton1" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="60.0" prefWidth="180.0">
                            <font>
                               <Font name="Verdana Bold" size="37.0" />
                            </font>
@@ -41,7 +41,7 @@
                               <Font name="Verdana Bold" size="20.0" />
                            </font>
                         </Text>
-                        <Button maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="60.0" prefWidth="180.0">
+                        <Button fx:id="boton2" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="60.0" prefWidth="180.0">
                            <graphic>
                               <ImageView fitHeight="50.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true" rotate="180.0">
                                  <image>
