Subiendo PDF del proyecto, imagenes del menu de cargar de laberinto cambiadas

--- a/src/unam/fesaragon/estructuradatos/vistas/Menu.fxml
+++ b/src/unam/fesaragon/estructuradatos/vistas/Menu.fxml
@@ -29,7 +29,7 @@
                               <Font name="Verdana Bold" size="37.0" />
                            </font>
                            <graphic>
-                              <ImageView fitHeight="50.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true">
+                              <ImageView fx:id="imgBoton1" fitHeight="50.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true">
                                  <image>
                                     <Image url="@../assets/icons/play.png" />
                                  </image>
@@ -43,7 +43,7 @@
                         </Text>
                         <Button fx:id="boton2" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="60.0" prefWidth="180.0">
                            <graphic>
-                              <ImageView fitHeight="50.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true" rotate="180.0">
+                              <ImageView fx:id="imgBoton2" fitHeight="50.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true" rotate="180.0">
                                  <image>
                                     <Image url="@../assets/icons/upload.png" />
                                  </image>
